Fix XSeries certificate links

--- a/credentials/templates/credentials/program_certificate.html
+++ b/credentials/templates/credentials/program_certificate.html
@@ -8,7 +8,7 @@
         <div class="wrapper-header">
             <header class="header-app" role="banner">
                 <h1 class="header-app-title">
-                    <a class="logo" href="/">
+                    <a class="logo" href="{{lms_base_url}}">
                         <img class="logo-img" src="{% static 'images/logo-llpa.png' %}" alt="{% firstof site.name platform_name %}" />
                     </a>
                     <span class="sr-only">{% firstof site.name platform_name %}</span>
@@ -128,7 +128,7 @@
                     <div class="wrapper-accomplishment-stamps">
                         <ul class="accomplishment-stamps copy-list">
                             <li class="accomplishment-stamp-platform">
-                                <a class="img-link" href="/">
+                                <a class="img-link" href="{{lms_base_url}}">
                                     <img class="logo-img" src="{% static 'images/logo-llpa.png' %}" alt="{{ platform_name }}"/>
                                 </a>
                             </li>
@@ -177,13 +177,13 @@
                     <nav class="footer-app-nav">
                         <ul class="list list-legal">
                             <li class="nav-item">
-                                {% blocktrans with link_start='<a class="action" href="/tos">' link_end='</a>' %}
-                                    {{ link_start }}Terms of Service &amp; Honor Code
+                                {% blocktrans with link_start='<a class="action" href="' link_middle='/tos">' link_end='</a>' %}
+                                    {{ link_start }} {{lms_base_url}}{{link_middle}} Terms of Service &amp; Honor Code {{ link_end }}
                                 {% endblocktrans %}
                             </li>
                             <li class="nav-item">
-                                {% blocktrans with link_start='<a class="action" href="/privacy">' link_end='</a>' %}
-                                    {{ link_start }} Privacy Policy {{ link_end }}
+                                {% blocktrans with link_start='<a class="action" href="' link_middle='/privacy">' link_end='</a>' %}
+                                    {{ link_start }} {{lms_base_url}}{{link_middle}} Privacy Policy {{ link_end }}
                                 {% endblocktrans %}
                             </li>
                         </ul>
