Fix XSeries certificate username

--- a/credentials/templates/credentials/program_certificate.html
+++ b/credentials/templates/credentials/program_certificate.html
@@ -24,7 +24,7 @@
                 <div class="message message-block message-notice">
                     <div class="message-text">
                         <h2 class="message-title">
-                            {% blocktrans with user_name=certificate_context.user_data.name %}
+                            {% blocktrans with user_name=current_certificate_context_username %}
                                 Congratulations, {{ user_name }}!
                             {% endblocktrans %}
                         </h2>
@@ -83,7 +83,7 @@
                     <div class="wrapper-accomplishment-statement">
                         <div class="accomplishment-statement">
                             <p class="accomplishment-statement-lead">
-                                {% blocktrans with user_name=certificate_context.user_data.name  %}
+                                {% blocktrans with user_name=current_certificate_context_username  %}
                                     <span class="accomplishment-statement-detail copy">This is to certify that</span>
                                     <strong class="accomplishment-recipient">{{ user_name }}</strong>
                                     <span class="accomplishment-summary copy">successfully completed all courses in the XSeries Program</span>
