Update certificate username color

--- a/credentials/static/sass/_credentials.scss
+++ b/credentials/static/sass/_credentials.scss
@@ -1,4 +1,7 @@
 .credentials {
+    .accomplishment-recipient{
+      color: #dd4628;
+    }
     .wrapper-header {
         background: #30363a;
         padding-top: 1.25rem;
