add style for program certificate

--- a/credentials/templates/credentials/program_certificate.html
+++ b/credentials/templates/credentials/program_certificate.html
@@ -1,15 +1,15 @@
 {% load i18n %}
 {% load staticfiles %}
 {% block content %}
-<div class="layout-accomplishment view-valid-accomplishment ltr certificate certificate-xseries" data-view="valid-accomplishment">
+<div class="credentials layout-accomplishment view-valid-accomplishment ltr certificate certificate-xseries" data-view="valid-accomplishment">
 
     <div class="wrapper-view" dir="ltr">
 
         <div class="wrapper-header">
             <header class="header-app" role="banner">
                 <h1 class="header-app-title">
-                    <a class="logo" href="{{ lms_base_url }}">
-                        <img class="logo-img" src="{% static 'images/logo-edX.png' %}" alt="{% firstof site.name platform_name %}" />
+                    <a class="logo" href="{{lms_base_url}}">
+                        <img class="logo-img" src="{% static 'images/logo-llpa.png' %}" alt="{% firstof site.name platform_name %}" />
                     </a>
                     <span class="sr-only">{% firstof site.name platform_name %}</span>
                 </h1>
@@ -41,6 +41,7 @@
                             <button title="{% trans 'Print' %}" class="action action-print btn icon-only" id="action-print-view">
                                 <i class="icon fa fa-print icon-print" aria-hidden="true"></i>
                                 <span class="action-label">{% trans "Print this certificate" %}</span>
+                                <span class="action_text">Print Certificate</span
                             </button>
                         </div>
                     </div>
@@ -71,7 +72,7 @@
                                 <li class="wrapper-organization">
                                     <div class="organization">
                                         {% if certificate_context.organization_data and certificate_context.organization_data.logo %}
-                                            <img class="organization-logo" src="{{ certificate_context.organization_data.logo }}" alt="{{ certificate_context.organization_data.name }} {% trans 'logo' %}">
+                                            <img class="organization-logo" src="{% static 'images/logo-llpa.png' %}" alt="{{ certificate_context.organization_data.name }} {% trans 'logo' %}">
                                         {% else %}
                                             <h4 class="organization-name">{{ certificate_context.organization_data.name }}</h4>
                                         {% endif %}
@@ -110,7 +111,7 @@
                                     {% for signatory in user_credential.credential.signatories.all %}
                                     <div class="signatory">
                                         {% if signatory.image %}
-                                            <img class="signatory-signature" src="{{signatory.image.url}}" alt="{{signatory.name}}">
+                                            <img class="signatory-signature" src="{% static 'images/signature.jpg' %}" alt="{{signatory.name}}">
                                         {% endif %}
                                         <h4 class="signatory-name">{{ signatory.name }}</h4>
 
@@ -128,7 +129,7 @@
                         <ul class="accomplishment-stamps copy-list">
                             <li class="accomplishment-stamp-platform">
                                 <a class="img-link" href="{{lms_base_url}}">
-                                    <img class="logo-img" src="{% static 'images/logo-edX.png' %}" alt="{{ platform_name }}"/>
+                                    <img class="logo-img" src="{% static 'images/logo-llpa.png' %}" alt="{{ platform_name }}"/>
                                 </a>
                             </li>
                             <li class="accomplishment-stamp-date">
@@ -144,6 +145,16 @@
                 </div>
             </div>
 
+            <div class="wrapper-accomplishment-metadata">
+                <div class="accomplishment-metadata">
+                    
+                </div>
+            </div>
+        </main>
+
+        <hr class="divider sr-only">
+
+        <div class="wrapper-footer">
             <div class="wrapper-accomplishment-support">
                 <div class="accomplishment-support">
                     <div class="accomplishment-support-print">
@@ -156,43 +167,13 @@
                     </div>
                 </div>
             </div>
-
-            <div class="wrapper-accomplishment-metadata">
-                <div class="accomplishment-metadata">
-                    <div class="accomplishment-metadata-bit accomplishment-metadata-aboutedx">
-                        <h3 class="accomplishment-metadata-title">{% trans "About edX" %}</h3>
-
-                        <p class="accomplishment-metadata-copy">
-                            {% blocktrans with link_start='<a href="http://www.edx.org">' link_end='</a>' platform_name=platform_name %}
-                                {{ link_start }} {{ platform_name }} {{ link_end }}
-                                offers interactive online classes and MOOCs from the world’s best universities,
-                                including MIT, Harvard, Berkeley, University of Texas, and many others. {{ platform_name }} is a non-profit
-                                online initiative created by founding partners Harvard and MIT.
-                            {% endblocktrans %}
-                        </p>
-                    </div>
-
-                    <div class="accomplishment-metadata-bit accomplishment-metadata-aboutcert">
-                        <h3 class="accomplishment-metadata-title">{% trans "About edX XSeries Certificates" %}</h3>
-
-                        <p class="accomplishment-metadata-copy">
-                            {% blocktrans with link_start='<a href="http://www.edx.org/verified-certificate">' link_end='</a>' platform_name=platform_name %}
-                                An {{ platform_name }} XSeries certificate signifies that the learner has completed a group of courses that
-                                add up to a rich understanding of an area of study. To complete an XSeries Program, learners
-                                must earn {{ link_start }}Verified Certificates{{ link_end }} from
-                                each of the courses included in the series.
-                            {% endblocktrans %}
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </main>
-
-        <hr class="divider sr-only">
-
-        <div class="wrapper-footer">
             <footer class="footer-app" role="contentinfo" id="company-info">
                 <div class="footer-app-legal">
+                    <div class="copyright-trademarks">
+                        <p class="copy">
+                          © 2017 LLPA Training Platform. All rights reserved.
+                        </p>
+                    </div>
                     <nav class="footer-app-nav">
                         <ul class="list list-legal">
                             <li class="nav-item">
@@ -207,17 +188,6 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="copyright-trademarks">
-                        <p class="copy">
-                            <span class="copyright">&copy;
-                                <a href="http://www.edx.org">{% trans "edX Inc." %}</a>
-                            </span>
-                            {% trans "All rights reserved except where noted. edX, Open edX and the edX and Open edX logos are registered trademarks or trademarks of edX Inc." %}
-                        </p>
-                    </div>
-                </div>
-                <div class="footer-app-related">
-                    <a class="img-link" href="http://edx.org/about"><img class="logo-img logo-openedx" src="{% static 'images/edx-openedx-logo-tag.png' %}" alt="{% trans 'Powered by Open edX' %}"/></a>
                 </div>
             </footer>
         </div>
