--- a/credentials/templates/credentials/program_certificate.html
+++ b/credentials/templates/credentials/program_certificate.html
@@ -9,7 +9,7 @@
             <header class="header-app" role="banner">
                 <h1 class="header-app-title">
                     <a class="logo" href="{{lms_base_url}}">
-                        <img class="logo-img" src="{% static 'images/logo-llpa.png' %}" alt="{% firstof site.name platform_name %}" />
+                        <img class="logo-img" src="{% static 'images/logo.png' %}" alt="{% firstof site.name platform_name %}" />
                     </a>
                     <span class="sr-only">{% firstof site.name platform_name %}</span>
                 </h1>
@@ -72,7 +72,7 @@
                                 <li class="wrapper-organization">
                                     <div class="organization">
                                         {% if certificate_context.organization_data and certificate_context.organization_data.logo %}
-                                            <img class="organization-logo" src="{% static 'images/logo-llpa.png' %}" alt="{{ certificate_context.organization_data.name }} {% trans 'logo' %}">
+                                            <img class="organization-logo" src="{% static 'images/logo.png' %}" alt="{{ certificate_context.organization_data.name }} {% trans 'logo' %}">
                                         {% else %}
                                             <h4 class="organization-name">{{ certificate_context.organization_data.name }}</h4>
                                         {% endif %}
@@ -129,7 +129,7 @@
                         <ul class="accomplishment-stamps copy-list">
                             <li class="accomplishment-stamp-platform">
                                 <a class="img-link" href="{{lms_base_url}}">
-                                    <img class="logo-img" src="{% static 'images/logo-llpa.png' %}" alt="{{ platform_name }}"/>
+                                    <img class="logo-img" src="{% static 'images/logo.png' %}" alt="{{ platform_name }}"/>
                                 </a>
                             </li>
                             <li class="accomplishment-stamp-date">
@@ -171,7 +171,7 @@
                 <div class="footer-app-legal">
                     <div class="copyright-trademarks">
                         <p class="copy">
-                          © 2017 LLPA Training Platform. All rights reserved.
+                          © 2017 Torque It. All rights reserved.
                         </p>
                     </div>
                     <nav class="footer-app-nav">
