add favicon and remove signature

--- a/credentials/templates/base.html
+++ b/credentials/templates/base.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
+    <link href="{% static 'images/favicon.ico' %}" rel="icon" type="image/x-icon">
 
     {% compress css %}
         {# This block is separated to better support browser caching. #}
