--- a/credentials/templates/credentials/program_certificate.html
+++ b/credentials/templates/credentials/program_certificate.html
@@ -111,7 +111,7 @@
                                     {% for signatory in user_credential.credential.signatories.all %}
                                     <div class="signatory">
                                         {% if signatory.image %}
-                                            <img class="signatory-signature" src="{% static 'images/signature.jpg' %}" alt="{{signatory.name}}">
+                                            <img class="signatory-signature" src="{{signatory.image.url}}" alt="{{signatory.name}}">
                                         {% endif %}
                                         <h4 class="signatory-name">{{ signatory.name }}</h4>
 
