--- a/credentials/templates/credentials/base.html
+++ b/credentials/templates/credentials/base.html
@@ -9,6 +9,7 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{% static 'sass/main-ltr.scss' %}" type="text/x-scss">
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
 {% endblock %}
 
 {% block content %}
