--- a/credentials/templates/base.html
+++ b/credentials/templates/base.html
@@ -15,6 +15,7 @@
         {# This block is separated to better support browser caching. #}
         {% block stylesheets %}
             <link rel="stylesheet" href="{% static 'sass/main-ltr.scss' %}" type="text/x-scss">
+            <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
         {% endblock %}
     {% endcompress %}
 </head>
