--- a/credentials/static/sass/_overrides.scss
+++ b/credentials/static/sass/_overrides.scss
@@ -39,7 +39,9 @@
     }
   }
 }
-
+.header-app .logo-img {
+  width: 300px;
+}
 // ------------------------------
 // #TEMP
 // ------------------------------
