--- a/credentials/templates/credentials/program_certificate.html
+++ b/credentials/templates/credentials/program_certificate.html
@@ -9,7 +9,7 @@
             <header class="header-app" role="banner">
                 <h1 class="header-app-title">
                     <a class="logo" href="{{lms_base_url}}">
-                        <img class="logo-img" src="{% static 'images/logo-llpa.png' %}" alt="{% firstof site.name platform_name %}" />
+                        <img class="logo-img" src="{% static 'images/computrain-logo.png' %}" alt="{% firstof site.name platform_name %}" />
                     </a>
                     <span class="sr-only">{% firstof site.name platform_name %}</span>
                 </h1>
