[FLS-309] logo,favicon,organization name

--- a/credentials/templates/credentials/programs/base.html
+++ b/credentials/templates/credentials/programs/base.html
@@ -30,8 +30,8 @@
               <li class="wrapper-organization">
                 <div class="organization">
                   <img class="organization-logo"
-                       src="{{ program_details.organizations.0.certificate_logo_image_url }}"
-                       alt="{{ program_details.organizations.0.name }} {% trans 'logo' as tmsg%} {{ tmsg | htmlescape }}">
+                    src="/static/images/logo.png"
+                    alt="{{ program_details.organizations.0.name }} {% trans 'logo' as tmsg%} {{ tmsg | htmlescape }}">
                 </div>
               </li>
             </ul>
@@ -59,7 +59,7 @@
               {% filter htmlescape  %}
                 {# Translators: organization_name is the display name for the provided organization e.g (e.g., Test Organization). #}
                 {% blocktrans trimmed with organization_name=program_details.organizations.0.display_name platform_name=site.siteconfiguration.platform_name %}
-                  a program offered by {{ organization_name }}, in collaboration with {{ platform_name }}.
+                  a program offered by {{ organization_name }} Lakeside Learning, in collaboration with {{ platform_name }}.
                 {% endblocktrans %}
               {% endfilter %}
             </span>
