--- a/credentials/templates/base.html
+++ b/credentials/templates/base.html
@@ -11,6 +11,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico" />
     <title>{% block title %}{% endblock title %}</title>
 
     {% if LANGUAGE_BIDI %}
