--- a/credentials/templates/credentials/programs/base.html
+++ b/credentials/templates/credentials/programs/base.html
@@ -59,7 +59,7 @@
               {% filter htmlescape  %}
                 {# Translators: organization_name is the display name for the provided organization e.g (e.g., Test Organization). #}
                 {% blocktrans trimmed with organization_name=program_details.organizations.0.display_name platform_name=site.siteconfiguration.platform_name %}
-                  a program offered by {{ organization_name }} Lakeside Learning, in collaboration with {{ platform_name }}.
+                  a program offered by {{ organization_name }} Lakeside Learning.
                 {% endblocktrans %}
               {% endfilter %}
             </span>
