--- a/credentials/apps/verifiable_credentials/templates/verifiable_credentials/no-wallet.html
+++ b/credentials/apps/verifiable_credentials/templates/verifiable_credentials/no-wallet.html
@@ -1,11 +1,1 @@
-{% extends 'base.html' %}
-{% load html %}
-{% load i18n %}
-
-{% block title %}
-  {{ title | force_escape }}
-{% endblock title %}
-
-{% block wrapper_content %}
-  <pre>{content}</pre>
-{% endblock %}
+<h1>Hello NoWallet!</h1>
